# imgeda

./: .dockerignore  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: cdk.yml  ci.yml  publish.yml
cdk/: .gitignore  package-lock.json  package.json  tsconfig.json
cdk/lambda-layer/: Dockerfile
cdk/lib/: imgeda-stack.ts
cdk/test/: imgeda-stack.test.ts
docs/: architecture.md  demo.tape  record_demo.py
examples/: policy.yml
lambda/: .dockerignore  Dockerfile
src/imgeda/: __init__.py  __main__.py  utils.py
src/imgeda/cli/: annotations.py  app.py  check.py  diff.py  embed.py  export.py  gate.py  interactive.py  plot.py  report.py  scan.py
src/imgeda/core/: aggregator.py  analyzer.py  annotations.py  detector.py  diff.py  duplicates.py  embeddings.py  format_detector.py  gate.py  hasher.py  leakage.py
src/imgeda/io/: csv_io.py  image_reader.py  manifest_io.py  parquet_io.py
src/imgeda/lambda_handler/: handler.py
src/imgeda/lambda_handler/handlers/: aggregate.py  analyze_batch.py  generate_plots.py  list_images.py  merge_manifests.py
src/imgeda/models/: config.py  manifest.py  policy.py
src/imgeda/pipeline/: checkpoint.py  runner.py  signals.py
src/imgeda/plotting/: annotations.py  artifacts.py  aspect_ratio.py  base.py  blur.py  dimensions.py  duplicates.py  embeddings.py  exif.py  file_size.py  pixel_stats.py
tests/: conftest.py  test_analyzer.py  test_annotations.py  test_blur.py  test_cli.py  test_csv_export.py  test_diff.py  test_duplicates.py  test_embed_cli.py  test_embeddings.py  test_export.py  test_format_detector.py  test_gate.py  test_gate_extended.py  test_interactive.py  test_lambda_handler.py  test_leakage.py  test_manifest_io.py  test_new_cli.py  test_new_plots.py  test_pipeline.py  test_plotting.py
tests/fixtures/blood_cells/annotations/: instances.json
tests/integration/: conftest.py  test_blood_cells.py  test_e2e_pipeline.py  test_scan_options.py
