[project]
name = "imgeda"
dynamic = ["version"]
description = "High-performance image dataset exploratory data analysis CLI tool"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Randall Hunt (Caylent)", email = "randall.hunt@caylent.com" }
]
requires-python = ">=3.10"
keywords = ["image", "eda", "dataset", "analysis", "quality", "duplicates", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "questionary>=2.1",
    "Pillow>=11.0",
    "numpy>=2.0",
    "imagehash>=4.3",
    "orjson>=3.10",
    "matplotlib>=3.10",
]

[project.urls]
Homepage = "https://github.com/caylent/imgeda"
Repository = "https://github.com/caylent/imgeda"
"Bug Tracker" = "https://github.com/caylent/imgeda/issues"

[project.optional-dependencies]
opencv = ["opencv-python-headless>=4.10"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.3",
    "ruff>=0.9",
    "mypy>=1.14",
]

[project.scripts]
imgeda = "imgeda.cli.app:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/imgeda"]

[tool.hatch.build.targets.sdist]
exclude = ["docs/examples/", "data/", "plots/", ".claude/"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
